[package]
name = "solana-escrow-example"
version = "0.1.1"
edition = "2021"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.8.0"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
solana-frozen-abi = "1.8.0"
zeroize = "1.4.2"

[lib]
crate-type = ["cdylib", "lib"]
